W-14990525: Remove message properties/attachments