@@ -6,18 +6,8 @@
  */
 package org.mule.runtime.core.internal.message;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.Collections.singletonMap;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.hasItem;
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.mule.runtime.api.message.Message.of;
 import static org.mule.runtime.api.metadata.DataType.BOOLEAN;
-import static org.mule.runtime.api.metadata.DataType.HTML_STRING;
 import static org.mule.runtime.api.metadata.DataType.JSON_STRING;
 import static org.mule.runtime.api.metadata.DataType.OBJECT;
 import static org.mule.runtime.api.metadata.DataType.STRING;
@@ -30,6 +20,14 @@ import static org.mule.runtime.api.metadata.MediaType.TEXT;
 import static org.mule.runtime.api.metadata.MediaType.XML;
 import static org.mule.tck.junit4.matcher.DataTypeCompatibilityMatcher.assignableTo;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
+import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.instanceOf;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.nullValue;
+import static org.hamcrest.MatcherAssert.assertThat;
+
 import org.mule.runtime.api.message.Message;
 import org.mule.runtime.api.metadata.DataType;
 import org.mule.runtime.api.metadata.MediaType;
@@ -38,15 +36,13 @@ import org.mule.runtime.core.privileged.metadata.DefaultCollectionDataType;
 import org.mule.tck.junit4.AbstractMuleTestCase;
 import org.mule.tck.testmodels.fruit.Apple;
 
-import org.junit.Test;
-
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.OptionalLong;
 
 import javax.activation.DataHandler;
+
+import org.junit.Test;
 
 public class DefaultMuleMessageBuilderTestCase extends AbstractMuleTestCase {
 
@@ -54,8 +50,6 @@ public class DefaultMuleMessageBuilderTestCase extends AbstractMuleTestCase {
   private static final String EMPTY_JSON = "{}";
   private static final Object BASE_ATTRIBUTES = new BaseAttributes() {};
   private static final DataType BASE_ATTRIBUTES_DATATYPE = fromObject(BASE_ATTRIBUTES);
-  private static final String PROPERTY_KEY = "propertyKey";
-  private static final Serializable PROPERTY_VALUE = "propertyValue";
   private static final MediaType HTML_STRING_UTF8 = HTML.withCharset(UTF_8);
 
   @Test
@@ -179,96 +173,6 @@ public class DefaultMuleMessageBuilderTestCase extends AbstractMuleTestCase {
   }
 
   @Test
-  public void inboundPropertyMap() {
-    Map<String, Serializable> inboundProperties = singletonMap(PROPERTY_KEY, PROPERTY_VALUE);
-    InternalMessage message = new DefaultMessageBuilder().value(TEST_PAYLOAD).inboundProperties(inboundProperties).build();
-
-    assertThat(message.getInboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getInboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(message.getInboundPropertyNames(), hasSize(1));
-    assertThat(message.getInboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void inboundPropertyMapCopy() {
-    Map<String, Serializable> inboundProperties = singletonMap(PROPERTY_KEY, PROPERTY_VALUE);
-    InternalMessage copy = new DefaultMessageBuilder(new DefaultMessageBuilder().value(TEST_PAYLOAD)
-        .inboundProperties(inboundProperties).build()).build();
-
-    assertThat(copy.getInboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(copy.getInboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(copy.getInboundPropertyNames(), hasSize(1));
-    assertThat(copy.getInboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void outboundPropertyMap() {
-    Map<String, Serializable> outboundProperties = singletonMap(PROPERTY_KEY, PROPERTY_VALUE);
-    InternalMessage message = new DefaultMessageBuilder().value(TEST_PAYLOAD).outboundProperties(outboundProperties).build();
-
-    assertThat(message.getOutboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getOutboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(message.getOutboundPropertyNames(), hasSize(1));
-    assertThat(message.getOutboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void outboundPropertyMapCopy() {
-    Map<String, Serializable> outboundProperties = singletonMap(PROPERTY_KEY, PROPERTY_VALUE);
-    InternalMessage copy = new DefaultMessageBuilder(new DefaultMessageBuilder().value(TEST_PAYLOAD)
-        .outboundProperties(outboundProperties).build()).build();
-
-    assertThat(copy.getOutboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(copy.getOutboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(copy.getOutboundPropertyNames(), hasSize(1));
-    assertThat(copy.getOutboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void inboundProperty() {
-    InternalMessage message =
-        new DefaultMessageBuilder().value(TEST_PAYLOAD).addInboundProperty(PROPERTY_KEY, PROPERTY_VALUE).build();
-
-    assertThat(message.getInboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getInboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(message.getInboundPropertyNames(), hasSize(1));
-    assertThat(message.getInboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void inboundPropertyDataType() {
-    InternalMessage message =
-        new DefaultMessageBuilder().value(TEST_PAYLOAD).addInboundProperty(PROPERTY_KEY, PROPERTY_VALUE, HTML_STRING).build();
-
-    assertThat(message.getInboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getInboundPropertyDataType(PROPERTY_KEY), equalTo(HTML_STRING));
-    assertThat(message.getInboundPropertyNames(), hasSize(1));
-    assertThat(message.getInboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void outboundProperty() {
-    InternalMessage message = new DefaultMessageBuilder().value(TEST_PAYLOAD).addOutboundProperty(PROPERTY_KEY, PROPERTY_VALUE)
-        .build();
-
-    assertThat(message.getOutboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getOutboundPropertyDataType(PROPERTY_KEY), equalTo(STRING));
-    assertThat(message.getOutboundPropertyNames(), hasSize(1));
-    assertThat(message.getOutboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
-  public void outboundPropertyDataType() {
-    InternalMessage message = new DefaultMessageBuilder().value(TEST_PAYLOAD)
-        .addOutboundProperty(PROPERTY_KEY, PROPERTY_VALUE, HTML_STRING).build();
-
-    assertThat(message.getOutboundProperty(PROPERTY_KEY), equalTo(PROPERTY_VALUE));
-    assertThat(message.getOutboundPropertyDataType(PROPERTY_KEY), equalTo(HTML_STRING));
-    assertThat(message.getOutboundPropertyNames(), hasSize(1));
-    assertThat(message.getOutboundPropertyNames(), hasItem(PROPERTY_KEY));
-  }
-
-  @Test
   public void nullPayload() {
     Message message = of(null);
     assertThat(message.getPayload().getDataType().getType(), equalTo(Object.class));
@@ -305,7 +209,7 @@ public class DefaultMuleMessageBuilderTestCase extends AbstractMuleTestCase {
 
   @Test
   public void mutatePayloadDifferentTypeWithMediaTypeUpdateTypeAndConserveMimeType() {
-    Long payload = new Long(1);
+    Long payload = Long.valueOf(1);
     DataHandler dataHandler = new DataHandler(payload, XML.toString());
     Message copy = new DefaultMessageBuilder(createTestMessage()).value(dataHandler).build();
 
@@ -319,7 +223,7 @@ public class DefaultMuleMessageBuilderTestCase extends AbstractMuleTestCase {
     Apple apple = new Apple();
     long appleSize = 111;
     Message message =
-        new DefaultMessageBuilder().payload(new TypedValue(apple, fromObject(apple), OptionalLong.of(appleSize))).build();
+        new DefaultMessageBuilder().payload(new TypedValue<>(apple, fromObject(apple), OptionalLong.of(appleSize))).build();
     Message copy = new DefaultMessageBuilder(message).build();
 
     assertThat(copy.getPayload(), is(message.getPayload()));
